--add-exports should not be needed anymore